# betaloop

./: betaloop_config.yaml  betaloop_config_TriBoxTri.yaml  betaloop_config_TriBoxTri_cff.yaml  box.yaml  doubletriangle.py  tbt_as.yaml  triangle.yaml
rust/: Cargo.toml  box_integrand.yaml  build.rs  default_tests_config.yaml  run_tests.sh
rust/data/: TriBoxTri.yaml  TriBoxTri_as.yaml  auto_sectoring_rules_TriBoxTri.yaml  auto_sectoring_rules_TriBoxTri_ORTHOGONAL_SPACE_WITH_PINCHED_VS_NON_PINCHED_DIFF_ONLY.yaml  auto_sectoring_rules_TriBoxTri_ORTHOGONAL_SPACE_WITH_PINCHED_VS_NON_PINCHED_DIFF_ONLY_AMPLITUDE_SUBTR.yaml  auto_sectoring_rules_TriBoxTri_amp.yaml  auto_sectoring_rules_TriBoxTri_amp_final.yaml  auto_sectoring_rules_TriBoxTri_amplitude_level_subtraction.yaml  auto_sectoring_rules_TriBoxTri_sg.yaml  auto_sectoring_rules_TriBoxTri_sg_final.yaml  auto_sectoring_rules_TriBoxTri_supergraph_level_subtraction.yaml  loop_induced_TriBoxTri.yaml  loop_induced_TriBoxTri_reversed.yaml  sectoring_rules_TriBoxTri.yaml
rust/generation_scripts/: generate_sectoring_rules.py  generate_sectoring_rules_general.py  generation_helper.nb  loop_induced_TriBoxTri.py
rust/generation_scripts/cLTD-1.1.0/: Examples.nb
rust/src/: box_subtraction.rs  bubble.rs  h_function_test.rs  integrands.rs  loop_induced_triboxtri.rs  main.rs  observables.rs  raised_bubble.rs  tbbt.rs  tests.rs  triangle_subtraction.rs  triboxtri.rs  triboxtri_cff.rs  triboxtri_cff_as.rs  triboxtri_cff_sectored.rs  triboxtri_cff_sg.rs  utils.rs
